--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,7 @@
   yum:
     name: https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
     state: present
+    disable_gpg_check: yes
   when: ansible_os_family == 'RedHat'
 
 - name: Install all php packages
