--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
     name: https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
     state: present
     disable_gpg_check: yes
-  when: ansible_os_family == 'RedHat'
+  when: ansible_os_family == 'RedHat' and ansible_distribution != 'Fedora'
 
 - name: Install all php packages
   package:
