Update CI standards

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
 
       - name: Install test dependencies.
-        run: pip3 install ansible ansible-lint==5.4.0 molecule[docker] docker yamllint jmespath e2j2 yq
+        run: pip3 install ansible ansible-lint==5.4.0 molecule[docker] molecule-hetznercloud docker yamllint jmespath e2j2 yq
 
       - name: Set-up github runner
         run: |
@@ -177,4 +177,4 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
           MOLECULE_PLAYBOOK: ${{ matrix.playbook }}
-
+          HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
