--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,12 +13,40 @@
       paths:
         - "vars"
 
-- name: Install RPM w/ all remi repositories
-  yum:
-    name: https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
-    state: present
-    disable_gpg_check: yes
+- name: RedHat family remi repository
+  block:
+
+    - name: Define module name
+      set_fact:
+        php_module: "remi-{{ php_version }}"
+
+    - name: Install RPM w/ all remi repositories
+      yum:
+        name: https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
+        state: present
+        disable_gpg_check: yes
+
   when: ansible_os_family == 'RedHat' and ansible_distribution != 'Fedora'
+
+- name: RedHat family remi repository (>=8)
+  block:
+
+    - name: Get php module
+      command: dnf module list -y --enabled
+      changed_when: false
+      register: _php
+
+    - name: Reset php module
+      command: dnf module reset php -y
+      changed_when: true
+      when: php_module not in _php.stdout
+
+    - name: Activate php module
+      command: dnf module enable php:{{ php_module }} -y
+      changed_when: true
+      when: php_module not in _php.stdout
+
+  when: ansible_os_family == 'RedHat' and ansible_distribution != 'Fedora' and ansible_distribution_major_version|int >= 8
 
 - name: Install default php packages
   package:
