feat: Add dict 'php_ini_settings' of configurable php settings

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,9 +6,6 @@ php_version: 7.4
 # php release
 php_release: php74
 
-# php.ini location
-php_ini: /etc/php.ini
-
 # Default PHP packages
 php_packages:
   - php
@@ -26,3 +23,9 @@ php_packages:
 
 # Additional PHP packages
 php_packages_additional: []
+
+# Settings to configure in /etc/php.ini
+php_ini_settings:
+  date.timezone: Europe/Amsterdam
+  post_max_size: 25M
+  upload_max_filesize: 25M
