--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,1 +1,11 @@
 ---
+
+- name: Restart apache
+  ansible.builtin.service:
+    name: "{{ php_apache_service }}"
+    state: restarted
+
+- name: Restart fpm
+  ansible.builtin.service:
+    name: "{{ php_fpm_service }}"
+    state: restarted
