--- a/vars/family-Debian.yml
+++ b/vars/family-Debian.yml
@@ -1,8 +1,14 @@
 ---
 
 # name of the php socket
-php_socket: /var/run/php/php-fpm.sock
+php_socket: /run/php/php{{ php_version }}-fpm.sock
 
 # OS specific packages
 php_packages_os:
   - libapache2-mod-php
+
+# php-fpm service
+php_fpm_service: "php{{ php_version }}-fpm"
+
+# apache service
+php_apache_service: apache2
