feat: Introduction of FQCN

--- a/tasks/config-RedHat.yml
+++ b/tasks/config-RedHat.yml
@@ -1,12 +1,15 @@
 ---
 
-- name: Set all required php settings on {{ php_ini_file }}
-  replace:
-    path: "{{ php_ini_file }}"
+- name: Edit /etc/php.ini
+  ansible.builtin.replace:
+    path: /etc/php.ini
     regexp: '^(;)?{{ setting.key }}(\s)?=.*'
-    replace: '{{ setting.key }} = {{ setting.value}}'
+    replace: '{{ setting.key }} = {{ setting.value }}'
   loop: "{{ php_ini_settings | dict2items }}"
   loop_control:
     loop_var: setting
     label:
       - "{{ setting.key }} = {{ setting.value }}"
+  notify:
+    - Restart apache
+    - Restart fpm
