--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,10 @@ jobs:
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
 
       - name: Install test dependencies.
-        run: pip3 install "${{ matrix.ansible }}" "${{ matrix.ansible_lint }}" yamllint jmespath e2j2 yq
+        run: |
+          pip3 install "${{ matrix.ansible }}" "${{ matrix.ansible_lint }}" yamllint jmespath e2j2 yq
+          # Patch Ansible 2.9 for Rocky support 
+          find ~ -name distribution.py | xargs -n1 sed -i "s/'AlmaLinux'\],/'AlmaLinux', 'Rocky'\],/"
 
       - name: Install required galaxy collections
         run: |
