feat: Migrate to FQCN

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,12 +71,18 @@ jobs:
 
       - name: Patch Ansible 2.9 to support Rocky Linux
         run: |
-          ansible=$(pip show ansible | awk '/Version:/ {print $2}')
+          ansible=$(pip show ansible 2>/dev/null | awk '/Version:/ {print $2}')
+          ansible_core=$(pip show ansible-core 2>/dev/null | awk '/Version:/ {print $2}')
+          ansible=${ansible:-$ansible_core}
           if [[ $ansible =~ 2.9.* ]]
           then
+            echo "Ansible version = $ansible"
             echo "Patching ansible 2.9 for Rocky support"
             site=$(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
             sed -i "s/'AlmaLinux'\],/'AlmaLinux', 'Rocky'\],/" $site/ansible/module_utils/facts/system/distribution.py
+          else
+            echo "Ansible version = $ansible"
+            echo "No need to patch it"
           fi
 
       - name: Install required galaxy collections
@@ -275,12 +281,18 @@ jobs:
 
       - name: Patch Ansible 2.9 to support Rocky Linux
         run: |
-          ansible=$(pip show ansible | awk '/Version:/ {print $2}')
+          ansible=$(pip show ansible 2>/dev/null | awk '/Version:/ {print $2}')
+          ansible_core=$(pip show ansible-core 2>/dev/null | awk '/Version:/ {print $2}')
+          ansible=${ansible:-$ansible_core}
           if [[ $ansible =~ 2.9.* ]]
           then
+            echo "Ansible version = $ansible"
             echo "Patching ansible 2.9 for Rocky support"
             site=$(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
             sed -i "s/'AlmaLinux'\],/'AlmaLinux', 'Rocky'\],/" $site/ansible/module_utils/facts/system/distribution.py
+          else
+            echo "Ansible version = $ansible"
+            echo "No need to patch it"
           fi
 
       - name: Install required galaxy collections
