--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Install required galaxy collections
         run: |
           ansible-galaxy collection install community.docker
-          ansible-galaxy collection install -r meta/requirements.yml
+          ansible-galaxy collection install -r .collections
 
       - name: Retrieve wrapper scripts
         run: |
@@ -298,7 +298,7 @@ jobs:
       - name: Install required galaxy collections
         run: |
           ansible-galaxy collection install community.docker
-          ansible-galaxy collection install -r meta/requirements.yml
+          ansible-galaxy collection install -r .collections
 
       - name: Set-up github runner
         run: |
