--- a/molecule/default/.molecule-platforms-docker.yml
+++ b/molecule/default/.molecule-platforms-docker.yml
@@ -105,8 +105,8 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: opensuse15
-  ci: true
-  image: docker.io/dropveter/opensuse15-ansible:latest
+  ci: false
+  image: docker.io/geerlingguy/docker-opensuseleap15-ansible:latest
   privileged: true
   pre_build_image: true
   cgroupns_mode: host
@@ -169,7 +169,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: fedora37
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-fedora37-ansible:latest
   privileged: true
   pre_build_image: true
