--- a/molecule/default/.molecule-platforms-hetznercloud.yml
+++ b/molecule/default/.molecule-platforms-hetznercloud.yml
@@ -45,7 +45,7 @@
   server_type: cx11
   image: ubuntu-22.04
 - name: fedora37
-  ci: true
+  ci: false
   server_type: cx11
   image: fedora-37
 - name: fedora38
