--- a/molecule/default/.molecule-platforms-podman.yml
+++ b/molecule/default/.molecule-platforms-podman.yml
@@ -49,7 +49,7 @@
   ci: true
   image: docker.io/dropveter/almalinux9-ansible
 - name: opensuse15
-  ci: true
+  ci: false
   image: docker.io/dropveter/opensuse15-ansible:latest
 - name: opensusetumbleweed15
   ci: false
@@ -77,7 +77,7 @@
   ci: true
   image: docker.io/geerlingguy/docker-ubuntu2204-ansible:latest
 - name: fedora37
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-fedora37-ansible:latest
 - name: fedora38
   ci: false
